<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ananta.fieldAgent.Activity.LoginScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60sdp"
            android:background="@drawable/round_bg_globle"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/_14ssp"
                android:textColor="@color/white"
                android:gravity="center"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/login"/>

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_20sdp"
            android:layout_gravity="center"
            android:src="@drawable/logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginVertical="@dimen/_40sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mobile_no"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edMobileNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_background"
                    android:drawableStart="@drawable/ic_mobile"
                    android:drawableTint="@color/appColor"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppins_regular"
                    android:maxLength="10"
                    android:drawablePadding="@dimen/_5sdp"
                    android:inputType="number"
                    android:gravity="center_vertical"
                    android:hint="@string/enter_mobile_no"
                    android:padding="@dimen/_10sdp" />

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:background="@drawable/round_fill_background"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvSendOtpLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/poppins_bold"
                    android:gravity="center"
                    android:text="@string/send_otp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_margin="@dimen/_12sdp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvTermsCondition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/terms_conditions"
                    android:textColor="@color/appColor"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="|"
                    android:layout_marginHorizontal="@dimen/_5sdp"
                    android:textColor="@color/appColor"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:id="@+id/tvPrivacyPolicy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/privacy_policy"
                    android:textColor="@color/appColor"
                    android:textSize="@dimen/_12ssp" />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>


</LinearLayout>