<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ananta.fieldAgent.Activity.verifyOTPScreen">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_70sdp"
        android:background="@drawable/round_bg_globle"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_10sdp"
            android:src="@drawable/ic_back_arrow"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center_horizontal"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:text="@string/verify_otp"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_20sdp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_6sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="Enter the OTP received to \nverify your contact number"
                    android:textColor="@color/black"
                    android:layout_marginEnd="@dimen/_6sdp" />

                <TextView
                    android:id="@+id/tvOtpMobileNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/black"/>

            </LinearLayout>


            <com.chaos.view.PinView
                android:id="@+id/pinView"
                style="@style/PinWidget.PinView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:cursorVisible="true"
                android:gravity="center"
                android:inputType="number"
                android:autofillHints="smsOTPCode"
                android:importantForAutofill="yes"
                android:itemBackground="@color/white"
                app:hideLineWhenFilled="false"
                app:itemCount="6"
                app:itemHeight="50dp"
                app:itemRadius="10dp"
                app:itemWidth="50dp"
                app:lineColor="@color/appColor"
                android:layout_marginVertical="@dimen/_30sdp"
                android:imeOptions="actionDone" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_30sdp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:includeFontPadding="false"
                    android:padding="@dimen/_4sdp"
                    android:layout_gravity="center"
                    android:textSize="@dimen/_12ssp"
                    android:text="Didn`t Receive Otp?"
                    android:textColor="@color/black" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvResend"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:includeFontPadding="false"
                        android:padding="@dimen/_4sdp"
                        android:visibility="visible"
                        android:text="RESEND OTP"
                        android:fontFamily="@font/poppins_bold"
                        android:textColor="@color/appColor" />

                    <TextView
                        android:id="@+id/tvSetTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:includeFontPadding="false"
                        android:padding="@dimen/_4sdp"
                        android:text="59 s"
                        android:fontFamily="@font/poppins_bold"
                        android:textColor="@color/appColor" />
                </LinearLayout>


            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnOTPVerify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_30sdp"
                android:fontFamily="@font/poppins_bold"
                android:includeFontPadding="false"
                android:paddingVertical="@dimen/_8sdp"
                android:text="@string/verifyotp"
                android:textSize="@dimen/_12ssp"
                android:layout_marginVertical="@dimen/_30sdp"
                android:textAllCaps="false"
                app:backgroundTint="@color/appColor"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:includeFontPadding="false"
                android:text="@string/help_amp_support"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/appColor" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvTermsCondition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/terms_conditions"
                    android:textColor="@color/appColor"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="|"
                    android:layout_marginHorizontal="@dimen/_5sdp"
                    android:textColor="@color/appColor"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:id="@+id/tvPrivacyPolicy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/privacy_policy"
                    android:textColor="@color/appColor"
                    android:textSize="@dimen/_12ssp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>